Fix AI message color and alignment

--- a/src/pages/AIChatInterface/AIChatInterface.css
+++ b/src/pages/AIChatInterface/AIChatInterface.css
@@ -174,7 +174,7 @@
 }
 
 .message.ai {
-  color: black;
+  color: white;
   align-self: flex-start;
   margin-right: auto;
 }
